refactor(FuelPrice): use immutable lists
Resolves: https://sonarcloud.io/project/issues?open=AZrPF09s7IxbKjIkpUqy&id=Compairifuel_CompairifuelAPI
Resolves: https://sonarcloud.io/project/issues?open=AZrPF09s7IxbKjIkpUq0&id=Compairifuel_CompairifuelAPI
Resolves: https://sonarcloud.io/project/issues?open=AZrPF09s7IxbKjIkpUq2&id=Compairifuel_CompairifuelAPI